--- a/frontend/style.css
+++ b/frontend/style.css
@@ -153,3 +153,8 @@ button:active {
 .info a:hover {
     text-decoration: underline;
 }
+
+.cat-image {
+    object-fit: contain;
+    background: #eee;
+}
